--- a/LS_BI/.settings/org.talend.repository.prefs
+++ b/LS_BI/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:aFfucrLdEb8KEmf3fZfiz+xY+ouDC8VNh6GyR3rtItlXWtgvxE/KjFs\=
